fix: Remove tile "active"
This doesn't look very good on mobile, and I almost prefer it on desktop
too. It sort of makes it look like there's a delay on the button.

--- a/style.css
+++ b/style.css
@@ -68,11 +68,6 @@ body{
     justify-content: center;
 }
 
-.tile:active{
-    color: white !important;
-    background-color: rgb(2, 172, 132) !important;
-}
-
 #btn_container{
     width: 100%;
 }
